# superteam-academy-lms

superteam-academy/: Anchor.toml  README.md
superteam-academy/app/: package-lock.json  package.json
superteam-academy/app/.next/: routes-manifest.json
superteam-academy/app/src/lib/: sdk.ts
superteam-academy/app/src/pages/: index.tsx  profile.tsx
superteam-academy/app/src/pages/course/: [courseId].tsx
superteam-academy/app/src/types/: superteam_academy.ts
superteam-academy/programs/superteam-academy/: Cargo.toml
superteam-academy/programs/superteam-academy/src/: errors.rs  events.rs  lib.rs  tests.rs  utils.rs
superteam-academy/programs/superteam-academy/src/instructions/: award_streak_freeze.rs  claim_achievement.rs  claim_completion_bonus.rs  close_enrollment.rs  close_season.rs  complete_lesson.rs  create_course.rs  create_season.rs  enroll.rs  finalize_course.rs  init_learner.rs  initialize.rs  issue_credential.rs  mod.rs  register_referral.rs  update_config.rs  update_course.rs
superteam-academy/programs/superteam-academy/src/state/: config.rs  course.rs  enrollment.rs  learner.rs  mod.rs
superteam-academy/tests/: superteam-academy.ts
