[package]
name = "superteam-academy"
version = "0.1.0"
description = "Superteam Academy - Gamified LMS on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "superteam_academy"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
mpl-core = { version = "0.8.0", features = ["cpi"] }

[dev-dependencies]
anchor-client = "0.31.1"
